--- a/platforms/ios/www/assets/css/styles.css
+++ b/platforms/ios/www/assets/css/styles.css
@@ -12,6 +12,9 @@ body {
 .hidden {
   display: none;
 }
+.bold {
+  font-weight: bold;
+}
 .relative {
   position: relative;
 }
@@ -388,6 +391,10 @@ body {
   float: left;
   position: relative;
 }
+.bar-footer {
+  border-top: 1px solid #cfcfcf;
+  background: #fafafa;
+}
 /*
 .bottom-tabs {
     position: fixed;
@@ -531,6 +538,45 @@ body {
   margin: 0px;
 }
 /* === END Left Menu === */
+/* === Section-tabs === */
+.section-tabs {
+  background: #f7f7f7;
+  padding: 0px;
+  margin-bottom: 5px;
+  border-bottom: 1px solid #dfdfdf;
+}
+.section-tabs > .tab {
+  position: relative;
+  line-height: 50px;
+  padding: 0 10px;
+  border-right: 1px solid #dfdfdf;
+  font-size: 16px;
+  font-weight: 600;
+  overflow: hidden;
+  text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-transform: uppercase;
+}
+.section-tabs > .tab:last-child {
+  border-right: 0px;
+}
+.section-tabs > .tab.active {
+  background: #fff;
+}
+.section-tabs > .tab.active .flag-active {
+  display: block;
+}
+.section-tabs > .tab .flag-active {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  height: 5px;
+  width: 100%;
+  background: #43c364;
+  display: none;
+}
+/* === END Section-tabs === */
 /* ===== Home Screen ===== */
 .home-tpl {
   width: 100%;
@@ -659,6 +705,188 @@ body {
   margin-bottom: 5px;
 }
 /* ===== END Bills Detail Preview Screen ===== */
+/* ===== MPS Tabs Screens ===== */
+.mps-tpl > .row,
+.mp-groups-tpl > .row,
+.mp-committees-tpl > .row,
+.mp-area-tpl > .row,
+.bills-tpl-detail-preview > .row,
+.mps-tpl-detail-preview > .row,
+.mps-tpl .content-wrapper,
+.mp-groups-tpl .content-wrapper,
+.mp-committees-tpl .content-wrapper,
+.mp-area-tpl .content-wrapper,
+.bills-tpl-detail-preview .content-wrapper,
+.mps-tpl-detail-preview .content-wrapper {
+  padding: 0px;
+}
+.mps-tpl .short-preview,
+.mp-groups-tpl .short-preview,
+.mp-committees-tpl .short-preview,
+.mp-area-tpl .short-preview,
+.bills-tpl-detail-preview .short-preview,
+.mps-tpl-detail-preview .short-preview {
+  padding: 10px 10px 0px 10px;
+  background: #fff;
+  margin-bottom: 5px;
+  border-bottom: 1px solid #dfdfdf;
+}
+.mps-tpl .short-preview .profile-image,
+.mp-groups-tpl .short-preview .profile-image,
+.mp-committees-tpl .short-preview .profile-image,
+.mp-area-tpl .short-preview .profile-image,
+.bills-tpl-detail-preview .short-preview .profile-image,
+.mps-tpl-detail-preview .short-preview .profile-image {
+  width: 45px;
+  height: 70px;
+  float: left;
+  overflow: hidden;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 45px;
+}
+.mps-tpl .short-preview .name,
+.mp-groups-tpl .short-preview .name,
+.mp-committees-tpl .short-preview .name,
+.mp-area-tpl .short-preview .name,
+.bills-tpl-detail-preview .short-preview .name,
+.mps-tpl-detail-preview .short-preview .name {
+  margin-bottom: 5px;
+  font-size: 14px;
+  overflow: hidden;
+  text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #5c5c5c;
+}
+.mps-tpl .short-preview .info,
+.mp-groups-tpl .short-preview .info,
+.mp-committees-tpl .short-preview .info,
+.mp-area-tpl .short-preview .info,
+.bills-tpl-detail-preview .short-preview .info,
+.mps-tpl-detail-preview .short-preview .info {
+  margin-top: 5px;
+  float: left;
+  padding-top: 0px;
+  text-transform: uppercase;
+  font-size: 10px;
+  color: #5c5c5c;
+}
+.mps-tpl .short-preview .info li,
+.mp-groups-tpl .short-preview .info li,
+.mp-committees-tpl .short-preview .info li,
+.mp-area-tpl .short-preview .info li,
+.bills-tpl-detail-preview .short-preview .info li,
+.mps-tpl-detail-preview .short-preview .info li {
+  overflow: hidden;
+  text-align: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  line-height: 15px;
+}
+.mps-tpl .short-preview .preview-btn,
+.mp-groups-tpl .short-preview .preview-btn,
+.mp-committees-tpl .short-preview .preview-btn,
+.mp-area-tpl .short-preview .preview-btn,
+.bills-tpl-detail-preview .short-preview .preview-btn,
+.mps-tpl-detail-preview .short-preview .preview-btn {
+  margin-top: 5px;
+}
+.mps-tpl .short-preview > .col > .row,
+.mp-groups-tpl .short-preview > .col > .row,
+.mp-committees-tpl .short-preview > .col > .row,
+.mp-area-tpl .short-preview > .col > .row,
+.bills-tpl-detail-preview .short-preview > .col > .row,
+.mps-tpl-detail-preview .short-preview > .col > .row {
+  padding: 0px;
+}
+/* ===== END MPS Tabs Screens ===== */
+/* ===== mp-groups-tpl Screen ===== */
+.mp-groups-tpl .short-preview {
+  padding-bottom: 5px;
+}
+.mp-groups-tpl .info {
+  margin-top: 10px !important;
+  font-size: 12px !important;
+}
+/* ===== END mp-groups-tpl Screen ===== */
+/* ===== mp-area-tpl Screen ===== */
+.mp-area-tpl .short-preview {
+  padding: 10px 5px !important;
+}
+.mp-area-tpl .name {
+  width: 70%;
+  text-align: left !important;
+  line-height: 29px;
+  margin: 0px !important;
+}
+.mp-area-tpl .preview-btn {
+  margin-top: 0px !important;
+}
+/* ===== END mp-area-tpl Screen ===== */
+/* ===== mps-tpl-detail-preview Screen ===== */
+.mps-tpl-detail-preview .short-preview {
+  padding-top: 5px !important;
+}
+.mps-tpl-detail-preview .short-preview .name {
+  font-size: 16px;
+  margin: 0px auto 12px auto;
+}
+.mps-tpl-detail-preview .short-preview .profile-image {
+  width: 95px;
+  height: 95px;
+  float: none !important;
+  background-size: 95px;
+  margin: 0 auto;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+.mps-tpl-detail-preview .short-preview .detail-info {
+  color: #5c5c5c;
+  margin-top: 5px;
+  float: left;
+  padding-top: 0px;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+.mps-tpl-detail-preview .short-preview .detail-info li {
+  overflow: hidden;
+  text-align: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  line-height: 20px;
+}
+.mps-tpl-detail-preview .short-preview .detail-info li .label {
+  margin-right: 5px;
+}
+.mps-tpl-detail-preview .short-preview .detail-info li .txt {
+  font-weight: bold;
+}
+.mps-tpl-detail-preview .info-section {
+  padding: 0px !important;
+}
+.mps-tpl-detail-preview .info-section .name {
+  margin: 10px 5px !important;
+  font-size: 12px;
+  text-align: left;
+  text-overflow: inherit !important;
+  white-space: inherit !important;
+}
+.mps-tpl-detail-preview .info-section .section-title {
+  padding: 5px;
+  margin: 0px;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #fff;
+  background: #5c5c5c;
+}
+/* ===== END mps-tpl-detail-preview Screen ===== */
 /* ===== Options Screen ===== */
 .options-tpl {
   padding-top: 75px;
