--- a/platforms/ios/www/assets/less/styles.less
+++ b/platforms/ios/www/assets/less/styles.less
@@ -37,6 +37,10 @@ body {
     display: none;
 }
 
+.bold {
+    font-weight: bold;
+}
+
 .relative {
     position: relative;
 }
@@ -418,6 +422,12 @@ body {
     float: left;
     position: relative;
 }
+
+.bar-footer {
+    border-top: 1px solid #cfcfcf;
+    background: #fafafa;
+}
+
 /*
 .bottom-tabs {
     position: fixed;
@@ -591,6 +601,54 @@ body {
 
 
 
+/* === Section-tabs === */
+
+.section-tabs {
+    background: #f7f7f7;
+    padding: 0px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #dfdfdf;
+     >.tab {
+        position: relative;
+        line-height: 50px;
+        padding: 0 10px;
+        border-right: 1px solid #dfdfdf;
+        font-size: 16px;
+        font-weight: 600;
+        overflow: hidden;
+        text-align: center;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        text-transform: uppercase;
+        &:last-child {
+            border-right: 0px;
+        }
+
+        &.active {
+
+            background: #fff;
+            .flag-active {
+                display: block;
+            }
+
+        }
+        
+        .flag-active {
+            position: absolute;
+            bottom: 0px;
+            left: 0px;
+            height: 5px;
+            width: 100%;
+            background: #43c364;
+            display: none;
+        }
+
+     }
+}
+
+/* === END Section-tabs === */
+
+
 /* ===== Home Screen ===== */
 
 .home-tpl {
@@ -760,6 +818,174 @@ body {
 }
 
 /* ===== END Bills Detail Preview Screen ===== */
+
+/* ===== MPS Tabs Screens ===== */
+.mps-tpl,
+.mp-groups-tpl,
+.mp-committees-tpl,
+.mp-area-tpl,
+.bills-tpl-detail-preview,
+.mps-tpl-detail-preview {
+    > .row,
+    .content-wrapper {
+        padding: 0px;
+    }
+    .short-preview {
+        padding: 10px 10px 0px 10px;
+        background: #fff;
+        margin-bottom: 5px;
+        border-bottom: 1px solid #dfdfdf;
+        .profile-image {
+            width: 45px;
+            height: 70px;
+            float: left;
+            overflow: hidden;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: 45px;
+        }
+        .name {
+            margin-bottom: 5px;
+            font-size: 14px;
+            overflow: hidden;
+            text-align: center;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            text-transform: uppercase;
+            font-weight: bold;
+            color: #5c5c5c;
+
+        }
+        .info {
+            margin-top: 5px;
+            float: left;
+            padding-top: 0px;
+            text-transform: uppercase;
+            font-size: 10px;
+            color: #5c5c5c;
+            li {
+                overflow: hidden;
+                text-align: left;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                line-height: 15px;
+            }
+        }
+        .preview-btn {
+            margin-top: 5px;
+        }
+        >.col {
+            >.row {
+                padding: 0px;
+            }
+        }
+    }
+}
+
+/* ===== END MPS Tabs Screens ===== */
+
+/* ===== mp-groups-tpl Screen ===== */
+
+.mp-groups-tpl {
+    .short-preview {
+        padding-bottom: 5px;
+    }
+    .info {
+        margin-top: 10px !important;
+        font-size: 12px !important;
+    }
+}
+
+/* ===== END mp-groups-tpl Screen ===== */
+
+
+
+/* ===== mp-area-tpl Screen ===== */
+
+.mp-area-tpl {
+    .short-preview {
+        padding: 10px 5px !important;
+    }
+    .name {
+        width: 70%;
+        text-align: left !important;
+        line-height: 29px;
+        margin: 0px !important;
+    }
+    .preview-btn {
+        margin-top: 0px !important;
+    }
+}
+
+/* ===== END mp-area-tpl Screen ===== */
+
+
+/* ===== mps-tpl-detail-preview Screen ===== */
+
+.mps-tpl-detail-preview {
+
+    .short-preview {
+        padding-top: 5px !important;
+        .name {
+            font-size: 16px;
+            margin: 0px auto 12px auto;
+        }
+        .profile-image {
+            width: 95px;
+            height: 95px;
+            float: none !important;
+            background-size: 95px;
+            margin: 0 auto;
+            border-radius: 50%;
+            margin-bottom: 20px;
+        }
+        .detail-info {
+            color: #5c5c5c;
+            margin-top: 5px;
+            float: left;
+            padding-top: 0px;
+            text-transform: uppercase;
+            font-size: 12px;
+            li {
+                overflow: hidden;
+                text-align: left;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                line-height: 20px;
+                .label {
+                    margin-right: 5px;
+                }
+                .txt {
+                    font-weight: bold;
+                }
+            }
+        }
+    }
+    .info-section {
+        padding: 0px !important;
+        .name {
+            margin: 10px 5px !important;
+            font-size: 12px;
+            text-align: left;
+            text-overflow: inherit !important;
+            white-space: inherit !important;
+        }
+        .section-title {
+            padding: 5px;
+            margin: 0px;
+            width: 100%;
+            text-align: center;
+            font-size: 14px;
+            font-weight: normal;
+            line-height: 20px;
+            text-transform: uppercase;
+            color: #fff;
+            background: #5c5c5c;
+        }
+    }
+}
+
+/* ===== END mps-tpl-detail-preview Screen ===== */
 
 /* ===== Options Screen ===== */
 
